# Memory-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  chainlit_app.py  docker-compose.chainlit-db.yml  docker-compose.gpu.yml  docker-compose.yml  embedding_server.py  main.py  pyproject.toml
.chainlit/: config.toml
memory_agent/: __init__.py  chainlit_ui.py  config.py  context_builder.py  graph.py  llm.py  memory_extractor.py  memory_router.py  memory_taxonomy.py  persistent_store.py  prompts.py  state.py  tools.py
memory_agent/embedding/: __init__.py  base.py  factory.py  local.py  remote.py
memory_agent/long_term_memory/: __init__.py  consolidator.py  prompts.py  retrieval.py
memory_agent/long_term_memory/embedding/: __init__.py  factory.py  remote.py
memory_agent/long_term_memory/store/: __init__.py  base.py  factory.py  qdrant.py
memory_agent/store/: __init__.py  base.py  factory.py  qdrant_store.py
public/: hide-message-actions.js  memory-agent.css  theme.json
scripts/: download_embedding_model.py
scripts/sql/: init_chainlit_schema.sql
tests/: test_chainlit_ui.py  test_config.py  test_context_builder.py  test_embedding_factory.py  test_graph_memory_retrieval.py  test_memory_consolidator.py  test_memory_extractor.py  test_memory_retrieval.py  test_memory_taxonomy.py  test_qdrant_store.py
