[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-agent"
version = "0.1.0"
description = "A LangGraph + Chainlit memory agent with Qdrant vector memory."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "chainlit==2.11.1",
    "httpx==0.28.1",
    "langchain==1.3.2",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.2",
    "langgraph==1.2.2",
    "numpy==2.2.6",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "sentence-transformers==5.5.1",
    "typing-extensions==4.15.0",
    "qdrant-client>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["memory_agent"]
