[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-agent"
version = "0.1.0"
description = "A LangGraph + Chainlit memory agent with Qdrant vector memory."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "chainlit",
    "httpx",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "numpy>=2.3.0",
    "pydantic",
    "python-dotenv",
    "sentence-transformers",
    "typing-extensions",
    "qdrant-client>=1.18.0",
    "fastapi",
    "uvicorn",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]",
    "psycopg-pool",
    "orjson",
    "asyncpg",
    "SQLAlchemy",
    "greenlet",
]

[tool.hatch.build.targets.wheel]
packages = ["memory_agent"]
