[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-agent"
version = "0.1.0"
description = "A LangGraph + Chainlit memory agent with Qdrant vector memory."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<0.30.0",
    "numpy",
    "sentence-transformers",
    
    "chainlit",
    "httpx",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "python-dotenv",
    "typing-extensions",
    "qdrant-client",
    "fastapi",
    "uvicorn",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]",
    "psycopg-pool",
    "orjson",
    "asyncpg",
    "SQLAlchemy",
    "greenlet",
]

[tool.hatch.build.targets.wheel]
packages = ["memory_agent"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }